# uav_tracking

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: bag2img.launch  control_test.launch  uav_tracking.launch  video_record.launch
src/: control_test.cpp  img_tracking.cpp  test_tracking.cpp  tracking.cpp  uav_tracking.cpp  video_record.cpp
worlds/: tracking_scen.world
